[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/door_0002.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/door_0001.png" type="Texture" id=2]
[ext_resource path="res://assets/scripts/Door.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "indoor",
"speed": 12.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "outdoor",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42.5, 9.25 )

[node name="Door" type="Area2D"]
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, -16 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
animation = "outdoor"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 33.25 )
shape = SubResource( 2 )

[node name="timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
